; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux_x86/local/extr_42274.c_cmp_important_hwcaps.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux_x86/local/extr_42274.c_cmp_important_hwcaps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.my_important_hwcaps = type { i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @cmp_important_hwcaps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_important_hwcaps(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.my_important_hwcaps*, align 8
  %7 = alloca %struct.my_important_hwcaps*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.my_important_hwcaps*
  store %struct.my_important_hwcaps* %9, %struct.my_important_hwcaps** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.my_important_hwcaps*
  store %struct.my_important_hwcaps* %11, %struct.my_important_hwcaps** %7, align 8
  %12 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %6, align 8
  %13 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %7, align 8
  %16 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp slt i64 %14, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %84

20:                                               ; preds = %2
  %21 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %6, align 8
  %22 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %7, align 8
  %25 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp sgt i64 %23, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %20
  store i32 1, i32* %3, align 4
  br label %84

29:                                               ; preds = %20
  %30 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %6, align 8
  %31 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %7, align 8
  %34 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = icmp slt i64 %32, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %29
  store i32 -1, i32* %3, align 4
  br label %84

38:                                               ; preds = %29
  %39 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %6, align 8
  %40 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %7, align 8
  %43 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %42, i32 0, i32 1
  %44 = load i64, i64* %43, align 8
  %45 = icmp sgt i64 %41, %44
  br i1 %45, label %46, label %47

46:                                               ; preds = %38
  store i32 1, i32* %3, align 4
  br label %84

47:                                               ; preds = %38
  %48 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %6, align 8
  %49 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %48, i32 0, i32 2
  %50 = load i64, i64* %49, align 8
  %51 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %7, align 8
  %52 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %51, i32 0, i32 2
  %53 = load i64, i64* %52, align 8
  %54 = icmp slt i64 %50, %53
  br i1 %54, label %55, label %56

55:                                               ; preds = %47
  store i32 -1, i32* %3, align 4
  br label %84

56:                                               ; preds = %47
  %57 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %6, align 8
  %58 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %57, i32 0, i32 2
  %59 = load i64, i64* %58, align 8
  %60 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %7, align 8
  %61 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %60, i32 0, i32 2
  %62 = load i64, i64* %61, align 8
  %63 = icmp sgt i64 %59, %62
  br i1 %63, label %64, label %65

64:                                               ; preds = %56
  store i32 1, i32* %3, align 4
  br label %84

65:                                               ; preds = %56
  %66 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %6, align 8
  %67 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %66, i32 0, i32 3
  %68 = load i64, i64* %67, align 8
  %69 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %7, align 8
  %70 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %69, i32 0, i32 3
  %71 = load i64, i64* %70, align 8
  %72 = icmp slt i64 %68, %71
  br i1 %72, label %73, label %74

73:                                               ; preds = %65
  store i32 -1, i32* %3, align 4
  br label %84

74:                                               ; preds = %65
  %75 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %6, align 8
  %76 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %75, i32 0, i32 3
  %77 = load i64, i64* %76, align 8
  %78 = load %struct.my_important_hwcaps*, %struct.my_important_hwcaps** %7, align 8
  %79 = getelementptr inbounds %struct.my_important_hwcaps, %struct.my_important_hwcaps* %78, i32 0, i32 3
  %80 = load i64, i64* %79, align 8
  %81 = icmp sgt i64 %77, %80
  br i1 %81, label %82, label %83

82:                                               ; preds = %74
  store i32 1, i32* %3, align 4
  br label %84

83:                                               ; preds = %74
  store i32 0, i32* %3, align 4
  br label %84

84:                                               ; preds = %83, %82, %73, %64, %55, %46, %37, %28, %19
  %85 = load i32, i32* %3, align 4
  ret i32 %85
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
